--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   <li> Green tables</li>
   </ol>
 
+  <p> hello I am new to this whole coding on html thingh but i am basesixty and i plan to use this a lot for fun and uses
+  </p>
+  
+  
  
  </body>
  </html>
