--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <h2> things i dislike</h2>
  <ol>
   <li>tomatoes</li>
-  <li> Green tables</li>
+  <li> Green </li>
   </ol>
 
   <p> hello I am new to this whole coding on html thingh but i am basesixty and i plan to use this a lot for fun and uses
