--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
  
  </head>
  <body>
- 
- <h1>my page</hi> <img height="92px" src="/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" width="272px" id="hplogo" alt="Google" title="Google" onload="typeof google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" data-iml="1553780930538">
+ lt="Goog
+ <h1>my page</hi> 
  
  <h2> things I like</h2>
  
