--- a/index.html
+++ b/index.html
@@ -3,17 +3,43 @@
 <html lang="en">
 <head>
  <meta charset="utf-8"/>
- <title>base page</title>
+ <title>a better title</title>
  
  </head>
  <body>
- lt="Goog
+ 
  <h1>my page</hi> 
  
- <h2> things I like</h2>
+  <p>It is a period of civil war.
+Rebel spaceships, striking
+from a hidden base, have won
+their first victory against
+the evil Galactic Empire.</p>
+
+  <p>During the battle, Rebel
+spies managed to steal secret
+plans to the Empire's
+ultimate weapon, the DEATH
+STAR, an armored space
+station with enough power to
+destroy an entire planet.</p>
+
+  <p>Pursued by the Empire's
+sinister agents, Princess
+Leia races home aboard her
+starship, custodian of the
+stolen plans that can save
+her people and restore
+freedom to the galaxy.....
+</p>
+ 
+  
+  
+  
+  <h2> things I like</h2>
  
  <ul> 
-  <li> <h1>  skyrim</li>  </h1>
+  <li>skyrim</li>  
  <li> biking</li>
  </ul> 
  
