--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
  <meta charset="utf-8"/>
  <title>a better title</title>
- 
+ <link rel="stylesheet" type="text/css" href="style.css" />
  </head>
  <body>
  
