--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ from a hidden base, have won
 their first victory against
 the evil Galactic Empire.</p>
 
-  <p>During the battle, Rebel
+  <p class="crawltext">During the battle, Rebel
 spies managed to steal secret
 plans to the Empire's
 ultimate weapon, the DEATH
@@ -24,7 +24,7 @@ STAR, an armored space
 station with enough power to
 destroy an entire planet.</p>
 
-  <p>Pursued by the Empire's
+  <p class="crawltext" id="partthree">Pursued by the Empire's
 sinister agents, Princess
 Leia races home aboard her
 starship, custodian of the
@@ -46,7 +46,7 @@ freedom to the galaxy.....
  <h2> things i dislike</h2>
  <ol>
   <li>tomatoes</li>
-  <li> Green </li>
+  <li class="crawltext"> Green </li>
   </ol>
 
   <p> hello I am new to this whole coding on html thingh but i am basesixty and i plan to use this a lot for fun and uses
