moved class to div

--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
  </head>
  <body>
  
- <h1>my page</h1> 
+ <h1>Episode IV</h1>
+  <h2>A New Hope</h2>
  
-  <p>It is a period of civil war.
+<div class="crawltext">
+ <p>It is a period of civil war.
 Rebel spaceships, striking
 from a hidden base, have won
 their first victory against
 the evil Galactic Empire.</p>
 
-  <p class="crawltext">During the battle, Rebel
+  <p>During the battle, Rebel
 spies managed to steal secret
 plans to the Empire's
 ultimate weapon, the DEATH
@@ -25,7 +27,7 @@ STAR, an armored space
 station with enough power to
 destroy an entire planet.</p>
 
-  <p class="crawltext" id="partthree">Pursued by the Empire's
+  <p id="partthree">Pursued by the Empire's
 sinister agents, Princess
 Leia races home aboard her
 starship, custodian of the
@@ -33,27 +35,7 @@ stolen plans that can save
 her people and restore
 freedom to the galaxy.....
 </p>
- 
-  
-  
-  
-  <h2> things I like</h2>
- 
- <ul> 
-  <li>skyrim</li>  
- <li> biking</li>
- </ul> 
- 
- <h2> things i dislike</h2>
- <ol>
-  <li>tomatoes</li>
-  <li class="crawltext"> Green </li>
-  </ol>
-
-  <p> hello I am new to this whole coding on html thingh but i am basesixty and i plan to use this a lot for fun and uses
-  </p>
-  
-  
+  </div>
  
  </body>
- </html>
+</html>
