--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
 <h1>Episode IV</h1>
   <h2>A New Hope</h2>
  <p>It is a period of civil war.
-Rebel spaceships, striking
-from a hidden base, have won
-their first victory against
-the evil Galactic Empire.</p>
+rebel space ships, striking
+from a hidden base have won
+their first victory agianst
+the evil Galactec Empire.</p>
 
   <p>During the battle, Rebel
 spies managed to steal secret
-plans to the Empire's
-ultimate weapon, the DEATH
+plans to the Empires
+ultimate weapon, the DEaTH
 STAR, an armored space
 station with enough power to
-destroy an entire planet.</p>
+destroy an entire plant.</p>
 
   <p id="partthree">Pursued by the Empire's
-sinister agents, Princess
-Leia races home aboard her
+sinister agents, Princes
+Leia races home aboard a
 starship, custodian of the
 stolen plans that can save
-her people and restore
-freedom to the galaxy.....
+ people and restor
+fredom to the galaxy.....
 </p>
   </div>
  
